deleted extra line

--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang>
+<html>
     <head>
     
         <title>My Website</title>
@@ -8,6 +8,5 @@
         Hello world!
         hii
         iam black thunder
-    
     </body>
 </html>
