--- a/hello.html
+++ b/hello.html
@@ -5,8 +5,6 @@
         <title>My Website</title>
     </head>
     <body>
-        Hello world!
-        hii
-        iam black thunder
+        Hello world!!!
     </body>
 </html>
