--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Website</title>
-    </head>
-    <body>
-        Hello world!!!
-        fuk you
-    </body>
+  <head>
+    <title>My Website</title>
+  </head>
+  <body>
+    Hello world!!! fuk you bitch
+  </body>
 </html>
